--- a/src/componentes/CantoLirico/CantoLirico.css
+++ b/src/componentes/CantoLirico/CantoLirico.css
@@ -7,10 +7,12 @@
     font-weight: lighter;
     font-size: 30px;
     margin: 15px;
+    margin-bottom: 40px;
 }
 .textCatedra{
   text-align: center;     
   font-weight: lighter;
+  margin-bottom: 40px !important;
   font-size: 15px;
   max-width: 700px;       
   margin: 0 auto;        
@@ -26,10 +28,12 @@
 }
 
 .buttonVolver{
-    font-size: 13px;
+    font-size: 14px;
     margin: 25px auto;
+    margin-top: 150px;
     margin-bottom: 20px;
     display: block;
     padding: 3px 3px;
+    border-radius: 2px;
 
 }
