--- a/src/componentes/Conciertos/Conciertos.css
+++ b/src/componentes/Conciertos/Conciertos.css
@@ -7,7 +7,8 @@
   text-align: center;     
   font-weight: lighter;
   font-size: 15px;
-  max-width: 700px;   
+  max-width: 700px;  
+  margin-top: 30px !important; 
   margin: 0 auto;        
   line-height: 1.5; 
 }
@@ -17,5 +18,6 @@
    height: 300px;
    display: block;
    align-items: center;
+   margin-top: 70px !important;
    margin: 20px auto;
 }
