--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -1,39 +1,78 @@
+
 .banner {
   width: 100%;
   height: 200px;
-  padding: 2px;
-  background-image: url('/public/calliopeFinal.png');
+  background-image: url('/public/calliopeFinal.png'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  cursor: pointer; 
+  cursor: pointer;
   position: relative;
 }
 
 .navContainer {
   width: 100%;
-  
-}
-.navLinks{
-  background-color:  #e4c56edd;
-  margin: 0px;
-  
 }
 
+.navLinks {
+  background-color: #e4c56edd;
+  margin: 0;
+  margin-bottom: 30px;
+  padding: 2px 0;
+}
 
 ul {
-    list-style: none;
-    font-size: 15px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    
-    
+  list-style: none;
+  font-size: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap; /* permite que los links bajen si no hay espacio */
+  margin: 0;
+  padding: 0;
 }
 
 ul li a {
   text-decoration: none;
   color: #080808dd;
   font-size: 15px;
+  padding: 8px 12px;
+  transition: background-color 0.3s, color 0.3s;
+  border-radius: 6px;
+}
+
+ul li a:hover {
+  background-color: #d1a94e;
+  color: #080808;
+}
+
+
+@media (max-width: 768px) {
+  .banner {
+    height: 150px;
+  }
+
+  ul {
+    flex-direction: column; 
+    gap: 10px; 
+    text-align: center;
+  }
+
+  ul li a {
+    width: 100%;
+    display: block;
+    padding: 5px;
+  }
+}
+
+@media (max-width: 480px) {
+  .banner {
+    height: 120px; 
+  }
+
+  ul li a {
+    font-size: 14px; 
+    padding: 8px;
+  }
 }
