--- a/src/componentes/Repertorio/Repertorio.css
+++ b/src/componentes/Repertorio/Repertorio.css
@@ -12,13 +12,14 @@
   font-size: 15px;
   max-width: 700px;       
   margin: 0 auto;  
+  margin-top: 30px;
   margin-bottom: 50px;      
   line-height: 1.5; 
 }
 
 .imgDiego{
    max-width: 100%;
-   height: 300px;
+   height: 500px;
    display: block;
    align-items: center;
    margin: 20px auto;
