--- a/src/componentes/Inicio/Inicio.css
+++ b/src/componentes/Inicio/Inicio.css
@@ -15,18 +15,18 @@
 }
 
 .imgInicio {
-  width: 400px;
-  height: 400px;
+  width: 600px;
+  height: 700px;
   border-radius: 5px;
   object-fit: cover;
   margin-bottom: 15px;
 }
 
 .textoInicio {
-  font-size: 14px;
-  line-height: 1.5;
+  font-size: 15px;
+  line-height: 1.3;
   max-width: 500px;
-  margin-top: 30px;
+  margin-top: 200px !important;
 }
 
 .contenedorBoton {
@@ -66,7 +66,7 @@
 
   .textoInicio {
     max-width: 90%;
-    margin-top: 20px;
+    margin-top: 20px !important;
   }
 }
 
