--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -28,7 +28,7 @@ ul {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  flex-wrap: wrap; /* permite que los links bajen si no hay espacio */
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
 }
