--- a/src/componentes/Institucional/Institucional.css
+++ b/src/componentes/Institucional/Institucional.css
@@ -22,6 +22,7 @@
     font-size: 16px;
     font-weight: lighter;
     color: black;
+    margin: 5px;
     margin-top: 30px !important;
     margin-bottom: 15px !important;
     line-height: 1.4;
