--- a/src/componentes/CantoLirico/CantoLirico.css
+++ b/src/componentes/CantoLirico/CantoLirico.css
@@ -29,12 +29,18 @@
 }
 
 .buttonVolver{
-    font-size: 14px;
-    margin: 25px auto;
-    margin-top: 150px;
-    margin-bottom: 20px;
-    display: block;
-    padding: 3px 3px;
-    border-radius: 2px;
+    font-size: 14px  !important;
+    margin: 25px auto !important;
+    margin-top: 150px !important;
+    margin-bottom: 20px !important;
+    display: block !important;
+    padding: 10px !important;
+    border-radius: 2px !important;
+    color: black !important;
+    border: solid 1px black !important;
+}
 
+.buttonVolver:hover{
+    background-color: #e4c56edd;
+    opacity: 0.9;
 }
