--- a/src/componentes/Conciertos/Conciertos.css
+++ b/src/componentes/Conciertos/Conciertos.css
@@ -6,7 +6,7 @@
 .textConcert{
   text-align: center;     
   font-weight: lighter;
-  font-size: 15px;
+  font-size: 16px;
   max-width: 700px;  
   margin-top: 30px !important; 
   margin: 0 auto;        
@@ -20,4 +20,16 @@
    align-items: center;
    margin-top: 70px !important;
    margin: 20px auto;
+}
+
+@media (max-width: 768px) {
+  .imgConcert{
+    height: 300px;
+  }
+}
+
+@media (max-width: 480px) {
+  .imgConcert{
+    height: 250px;
+  }
 }
