--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -1,8 +1,8 @@
 
 .banner {
   width: 100%;
-  height: 200px;
-  background-image: url('/calliopeFinal.png'); 
+  height: 250px;
+  background-image: url('/banner.png'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -49,29 +49,29 @@ ul li a:hover {
 
 @media (max-width: 768px) {
   .banner {
-    height: 100px;
+    height: 150px;
   }
 
   ul {
     flex-direction: column; 
-    gap: 5px; 
+    gap: 3px; 
     text-align: center;
   }
 
   ul li a {
     width: 100%;
     display: block;
-    padding: 3px;
+    padding: 2px;
   }
 }
 
 @media (max-width: 480px) {
   .banner {
-    height: 100px; 
+    height: 130px; 
   }
 
   ul li a {
-    font-size: 14px; 
-    padding: 3px;
+    font-size: 13px; 
+    padding: 2px;
   }
 }
