--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -2,7 +2,7 @@
 .banner {
   width: 100%;
   height: 250px;
-  background-image: url('/banner.png'); 
+  background-image: url('/banner22.svg'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
