--- a/src/componentes/CantoLirico/CantoLirico.css
+++ b/src/componentes/CantoLirico/CantoLirico.css
@@ -5,24 +5,21 @@
 .titleCatedra{
     text-align: center;
     font-weight: lighter;
-    font-size: 30px;
+    font-size: 35px;
     margin: 15px;
     margin-bottom: 40px;
 }
 .textCatedra{
   text-align: center;     
   font-weight: lighter;
-  margin-top: 40px !important;
-  margin-bottom: 40px !important;
-  font-size: 16px;
-  max-width: 700px;       
-  margin: 0 auto;        
+  margin: 40px 60px 40px 60px;
+  font-size: 20px;     
   line-height: 1.5; 
 }
 
 .imgCatedra{
    max-width: 100%;
-   height: 500px;
+   height: 600px;
    display: block;
    align-items: center;
    margin: 20px auto;
