--- a/src/componentes/Conciertos/Conciertos.css
+++ b/src/componentes/Conciertos/Conciertos.css
@@ -6,30 +6,41 @@
 .textConcert{
   text-align: center;     
   font-weight: lighter;
-  font-size: 16px;
-  max-width: 700px;  
-  margin-top: 30px !important; 
-  margin: 0 auto;        
-  line-height: 1.5; 
+  font-size: 21px;
+  margin: 40px  90px 40px 90px      
+}
+
+.imgContConciertos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .imgConcert{
    max-width: 100%;
-   height: 400px;
+   height: 350px;
    display: block;
    align-items: center;
    margin-top: 70px !important;
    margin: 20px auto;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1580px) {
   .imgConcert{
     height: 300px;
+  }
+  .imgContConciertos{
+    display: flex;
+    flex-direction: column;
   }
 }
 
 @media (max-width: 480px) {
   .imgConcert{
     height: 250px;
+  }
+    .imgContConciertos{
+    display: flex;
+    flex-direction: column;
   }
 }
