--- a/src/componentes/Inicio/Inicio.css
+++ b/src/componentes/Inicio/Inicio.css
@@ -23,9 +23,10 @@
 }
 
 .textoInicio {
-  font-size: 15px;
+  font-size: 19px;
   line-height: 1.3;
-  max-width: 500px;
+  max-width: 800px;
+  margin-left: 50px;
   margin-top: 200px !important;
 }
 
@@ -39,9 +40,9 @@
 .linkInicio {
   background-color: #e4c56edd !important;
   border-color: #e4c56edd !important;
-  font-size: 13px !important;
+  font-size: 15px !important;
   color: black !important;
-  padding: 6px 12px;
+  padding: 15px;
   border-radius: 2px !important;
   text-align: center;
   transition: transform 0.2s;
@@ -52,7 +53,7 @@
 }
 
 
-@media (max-width: 1024px) {
+@media (max-width: 1500px) {
   .contenedorInicio {
     flex-direction: column;
     align-items: center;
@@ -67,6 +68,8 @@
   .textoInicio {
     max-width: 90%;
     margin-top: 20px !important;
+    font-size: 18px;
+    margin: 15px;
   }
 }
 
@@ -77,8 +80,9 @@
   }
 
   .textoInicio {
-    font-size: 13px;
+    font-size: 14px;
     max-width: 95%;
+    margin: 15px;
   }
 }
 
