--- a/src/componentes/Institucional/Institucional.css
+++ b/src/componentes/Institucional/Institucional.css
@@ -19,27 +19,22 @@
 }
 
 .pAlumnos {
-    font-size: 17px;
+    font-size: 19px;
     font-weight: lighter;
     color: black;
-    margin: 5px;
-    margin-top: 30px !important;
-    margin-bottom: 15px !important;
+    margin: 30px 20px 20px 20px;
     line-height: 1.4;
     word-wrap: break-word;
-    max-width: 700px;
+    
 }
 
-
 .calliopeH {
-    font-size: 17px;
+    font-size: 19px;
     text-align: center;
     font-weight: lighter;
     color: black;
-    max-width: 700px;
-    margin: 20px auto 60px auto;
-    margin-top: 30px !important;
-    line-height: 1.3;
+    margin: 30px 80px 60px 80px;
+    line-height: 1.4;
     word-wrap: break-word;
 }
 
