--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-html, body, #root {
-  height: 100%;
+html, body {
+  min-height: 100%;
   margin: 0;
+}
+
+#root {
+  min-height: 100vh;
 }
 
 .app {
@@ -10,6 +14,6 @@ html, body, #root {
 }
 
 footer {
-  margin-top: auto; 
+  margin-top: auto;
 }
 
