--- a/src/componentes/Conciertos/Conciertos.css
+++ b/src/componentes/Conciertos/Conciertos.css
@@ -4,43 +4,68 @@
 }
 
 .textConcert{
-  text-align: center;     
-  font-weight: lighter;
-  font-size: 21px;
-  margin: 40px  90px 40px 90px      
+    font-size: 23px;
+    font-weight: lighter;
+    color: black;
+    text-align: center;
+    line-height: 1.4;
+    word-wrap: break-word;
+    max-width: 1200px;
+    margin: 90px auto 120px;
+    padding: 0 20px;
 }
 
-.imgContConciertos{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.imgContConciertos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 25px;
+  max-width: 900px;
+  margin: 70px auto 90px;
+  justify-items: center;
 }
 
-.imgConcert{
-   max-width: 100%;
-   height: 350px;
-   display: block;
-   align-items: center;
-   margin-top: 70px !important;
-   margin: 20px auto;
+.imgConcert {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+  display: block;
 }
 
-@media (max-width: 1580px) {
-  .imgConcert{
-    height: 300px;
+@media (max-width: 768px) {
+  .textConcert {
+    font-size: 20px;
+    margin: 60px auto 90px;
   }
-  .imgContConciertos{
-    display: flex;
-    flex-direction: column;
+
+  .imgContConciertos {
+    grid-template-columns: 1fr;
+    gap: 15px;
+    margin: 40px auto 70px;
+  }
+
+  .imgConcert {
+    height: 400px;
+    width: 100%;
+    margin: 15px !important;
   }
 }
 
 @media (max-width: 480px) {
-  .imgConcert{
-    height: 250px;
+  .textConcert {
+    font-size: 18px;
+    line-height: 1.35;
+    margin: 40px auto 70px;
   }
-    .imgContConciertos{
-    display: flex;
-    flex-direction: column;
+
+  .imgContConciertos {
+    grid-template-columns: 1fr;
+    gap: 15px;
+    margin: 40px auto 70px;
+  }
+
+  .imgConcert {
+    width: 100%;
+    height: 240px;
+    margin: 15px !important;
   }
 }
