--- a/src/componentes/Informacion/Informacion.css
+++ b/src/componentes/Informacion/Informacion.css
@@ -1,31 +1,43 @@
-.titlInf{
-  text-align: center;     
+.titlInf {
+  text-align: center;
   font-weight: lighter;
-  font-size: 19px;
-  margin: 7px 50px 50px 100px ;
- 
+  font-size: 23px;
+  text-align: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 80px;
+  line-height: 1.4;
+  word-wrap: break-word;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
-.divInf{
+.divInf {
   margin-top: 50px;
-  display: flex;             
-  flex-direction: column;     
-  align-items: center;        
-  text-align: center; 
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
 }
-@media (max-width: 1580px){
-  .titlInf{
+
+.conteinerButtonInf{
+  margin-top: 80px;
+  margin-bottom: 50px;
+}
+
+@media (max-width: 1580px) {
+  .titlInf {
     margin: 15px;
     font-size: 16px;
   }
 }
 
-@media (max-width: 530px){
-  .titlInf{
+@media (max-width: 530px) {
+  .titlInf {
     margin: 15px;
     font-size: 14px;
   }
 }
-
-
