--- a/src/componentes/Informacion/Informacion.css
+++ b/src/componentes/Informacion/Informacion.css
@@ -4,8 +4,7 @@
   font-size: 23px;
   text-align: center;
   justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 80px;
+  margin-bottom: 100px;
   line-height: 1.4;
   word-wrap: break-word;
   max-width: 1200px;
@@ -15,7 +14,7 @@
 }
 
 .divInf {
-  margin-top: 50px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,14 +29,16 @@
 
 @media (max-width: 1580px) {
   .titlInf {
-    margin: 15px;
+    margin: 20px;
     font-size: 16px;
+    margin-bottom: 30px !important;
   }
 }
 
 @media (max-width: 530px) {
   .titlInf {
-    margin: 15px;
+    margin: 20px;
     font-size: 14px;
+    margin-bottom: 30px !important;
   }
 }
