--- a/src/componentes/Conciertos/Conciertos.css
+++ b/src/componentes/Conciertos/Conciertos.css
@@ -4,7 +4,7 @@
 
 .textConcert {
   font-size: 23px;
-  font-weight: lighter;
+  font-weight: 370;
   color: black;
   text-align: center;
   line-height: 1.4;
