--- a/src/componentes/Informacion/Informacion.css
+++ b/src/componentes/Informacion/Informacion.css
@@ -1,6 +1,6 @@
 .titlInf {
   text-align: center;
-  font-weight: lighter;
+  font-weight: 370;
   font-size: 23px;
   text-align: center;
   justify-content: center;
