--- a/src/componentes/Inicio/Inicio.css
+++ b/src/componentes/Inicio/Inicio.css
@@ -61,7 +61,8 @@
 
 .textoInicio {
   font-size: 24px;
-  font-weight: lighter;
+  font-weight: 370;
+  color: black;
   line-height: 1.3;
   margin-left: 50px;
   margin-top: 200px !important;
@@ -70,7 +71,7 @@
 .calliopeH2 {
   font-size: 25px;
   text-align: center;
-  font-weight: lighter;
+  font-weight: 370;
   color: black;
   line-height: 1.4;
   max-width: 800px;
