--- a/src/componentes/Institucional/Institucional.css
+++ b/src/componentes/Institucional/Institucional.css
@@ -20,7 +20,7 @@
 
 .pAlumnos {
     font-size: 23px;
-    font-weight: lighter;
+    font-weight: 370;
     text-align: center;
     justify-content: center;
     color: black;
@@ -32,7 +32,7 @@
 
 .calliopeH1 {
     font-size: 23px;
-    font-weight: lighter;
+    font-weight: 370;
     color: black;
     text-align: center;
     line-height: 1.4;
@@ -69,7 +69,7 @@
     border-color: #C5A059 !important;
 }
 
-/* Tablets */
+
 @media (max-width: 768px) {
   .divContainerAlumnos {
     gap: 15px;
@@ -98,7 +98,7 @@
   }
 }
 
-/* Mobile */
+
 @media (max-width: 480px) {
   .divContainerAlumnos {
     flex-direction: column;
