--- a/src/componentes/Repertorio/Repertorio.css
+++ b/src/componentes/Repertorio/Repertorio.css
@@ -1,6 +1,6 @@
 .titleRepertorio {
   text-align: center;
-  font-weight: lighter;
+  font-weight: 370;
   font-size: 40px;
   margin: 15px;
   margin-top: 20px;
@@ -9,7 +9,8 @@
 
 .textRepertorio {
   text-align: center;
-  font-weight: lighter;
+  color: black;
+  font-weight: 370;
   font-size: 23px;
   margin-top: 50px;
   margin-bottom: 70px;
@@ -28,7 +29,7 @@
   object-fit: cover;
 }
 
-/* Tablets */
+
 @media (max-width: 768px) {
   .titleRepertorio {
     font-size: 32px;
@@ -48,7 +49,7 @@
   }
 }
 
-/* Mobile */
+
 @media (max-width: 480px) {
   .titleRepertorio {
     font-size: 26px;
